# StaticLibTest

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/cool/tars/staticlibtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/cool/tars/staticlibtest/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cool/tars/staticlibtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
